# courgette

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  commitlint.yml  release.yml
src/courgette/: __init__.py  __main__.py  cli.py  plugin.py
tests/: conftest.py  test_behave_compat.py  test_diagnostics.py  test_hooks.py  test_i18n.py  test_parser_background.py  test_parser_basic.py  test_parser_errors.py  test_parser_i18n.py  test_parser_keywords.py  test_parser_location.py  test_parser_outline.py  test_parser_rule.py  test_parser_tables.py  test_parser_tags.py  test_registry_exact.py  test_registry_filtering.py  test_registry_parse.py  test_registry_regex.py  test_reporter.py  test_runner_outline.py  test_runner_scenario.py  test_runner_step.py  test_tracer.py  test_trie.py  test_type_coercion.py
tests/features/: background.feature  basic.feature  converters.feature  custom_types.feature  datatables.feature  diagnostics.feature  docstrings.feature  fixtures.feature  i18n_fr.feature  outline.feature  regex.feature  rule.feature  tags.feature
tests/steps/: step_api.py  step_arithmetic.py  step_auth.py  step_converters.py  step_cucumbers.py  step_custom_types.py  step_database.py  step_datatables.py  step_diagnostics.py  step_docstrings.py  step_fixtures.py  step_regex.py
ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: background.spec.ts  basic-arithmetic.spec.ts  converters.spec.ts  custom-types.spec.ts  datatables.spec.ts  diagnostics.spec.ts  docstrings.spec.ts  drafts.spec.ts  fixtures.spec.ts  helpers.ts  i18n-fr.spec.ts  tags.spec.ts  (+4 more)
vscode-courgette/: README.md  language-configuration.json  package-lock.json  package.json  vitest.config.ts  vscode-courgette
(+75 files in other folders)
